--- a/gta6.html
+++ b/gta6.html
@@ -84,6 +84,12 @@
             background-color: black;
         }
 
+        h1{
+            background-clip: text;
+            color: transparent;
+           background-image: radial-gradient(circle at 50% 71.7382vh, rgb(255, 189, 58) 0vh, rgb(255, 0, 68) 50vh, rgb(255, 0, 204) 90vh, rgba(32, 31, 66, 0) 121.739vh); opacity: 0.8249;
+        }
+
         .navbar {
             position: absolute;
             top: 0;
