--- a/editable.html
+++ b/editable.html
@@ -95,7 +95,7 @@
         .sage-green { background-color: #A8C4A2; } .terracotta { background-color: #D7926D; } .olive-green { background-color: #556B2F; } .lavender { background-color: #C8B9E2; } .aqua-blue { background-color: #7ACCCC; } .amber-yellow { background-color: #F9C74F; } .blush-pink { background-color: #F2AEBB; } .deep-plum { background-color: #6A4E77; }
 
         .day-section { margin-bottom: 40px; }
-        .day-section h2 { background-color: #e9e9e9; padding: 10px; margin-top: 0; margin-bottom: 15px; border-top: 2px solid #ccc; }
+        .day-section h2 { background-color: #fffff6; color:#1A426B; padding: 10px; margin-top: 0; margin-bottom: 15px; border-top: 2px solid #ccc; }
         .day-section h3 { margin-top: 20px; margin-bottom: 10px; padding-bottom: 5px; border-bottom: 1px solid #eee; font-size: 1.1em; color: #555; }
         .day-events { column-count: 2; column-gap: 25px; }
         .day-events ul { list-style: none; padding: 0; margin: 0; }
@@ -175,11 +175,37 @@
                  /* Spacing/breaks handled by general rules above */
             }
         }
+        .headerandimg {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.headerandimg img {
+    height: 100px;
+    width: 100px;
+    flex-shrink: 0;
+}
+
+.headerandimg h1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    text-align: center;
+    width: 100%;
+    pointer-events: none; /* Optional: lets clicks pass through to underlying elements */
+}
+
     </style>
 </head>
 <body>
     <div class="main-container">
+        <div class="headerandimg">
         <h1>The Big Retreat Festival - Workshop & Activity Timetable</h1>
+        <img src="logo.png" alt="logo">
+        </div>
 
         <div class="controls-area">
             <button id="toggleEditButton">Edit Timetable</button>
