--- a/editable.html
+++ b/editable.html
@@ -180,6 +180,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    margin-bottom: 10px;
 }
 
 .headerandimg img {
